Adicionado barId no ComentarioModel e alterado addComments para refletir essa alteração
